# chapter-sync

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  tailwind.config.js
.github/workflows/: release.yml  test.yml
docs/: pyproject.toml
docs/source/: conf.py  handlers.md  index.md  installation.md  series.md  subscription.md  sync.md  web.md
src/chapter_sync/: __main__.py  chapter.py  console.py  cover.py  db.py  email.py  epub.py  request.py  schema.py  series.py  subscriber.py  sync.py
src/chapter_sync/cli/: __init__.py  base.py  chapter.py  db.py  series.py  subscriber.py
src/chapter_sync/handlers/: __init__.py  base.py  custom.py  royal_road.py
src/chapter_sync/migrations/: alembic.ini  env.py
src/chapter_sync/migrations/versions/: 22a9c4241086_initial_database_structure.py  63139caea00e_initial_tables.py  83fa2026d9bb_replace_chapter_number_with_prev_next_.py  8de570b92996_initial_tables.py
src/chapter_sync/web/: __main__.py  chapter.py  dependencies.py  main.py  routes.py  series.py  subscriber.py
src/chapter_sync/web/static/: app.css
src/chapter_sync/web/templates/: base.html  chapter.html  header.html  index.html  macros.html  series.html  subscriber.html  subscribers.html
tests/: cli.py  conftest.py  email.py  factories.py  test_cover.py
tests/chapter/: test_export.py  test_list.py
tests/handlers/: test_custom.py  test_royal_road.py  test_royal_road_chapter_rename.py
tests/series/: test_add.py  test_remove.py
tests/sync/: test_custom.py
